--- a/giulia_hxs/contato.html
+++ b/giulia_hxs/contato.html
@@ -9,8 +9,9 @@
     </head>
     <body>
         <header>
-            <div class="caixa">
-                <h1><img src="logo.png"></h1>
+            <fieldset class="caixa">
+                <h1><img src="logo.png" alt=" Logo da Barbearia Alura"></h1>
+
 
                 <nav>
                     <ul>
@@ -19,8 +20,10 @@
                         <li><a href="contato.html">Contato</a></li>
                     </ul>
                 </nav>
-            </div>
+            
         </header>
+
+        <fieltdset>
         <main>
             <form>
                 <label for="nomesobrenome">Nome e sobrenome</label>
@@ -35,34 +38,36 @@
                 <label for="mensagem">Mensagem</label>
                 <textarea cols="70" rows="10" id="mensagem" class="input-padrao" required></textarea>
 
+                <fieldset>
+                 <legend> Como prefere o nosso contato? </legend> 
                 <label for="radio-email">email</label>
                 <input type="radio" value="email" id="radio-email">
 
                 <label for="radio-telefone">telefone</label>
                 <input type="radio" value="telefone" id="radio-telefone">
 
-                <label for="radio-watsapp">watsapp</label>
-                <input type="radio" value="watssap" id="radio-watsapp" checked>
-                WhatsApp 
-            </div>
+                <label for="radio-whatsapp">whatsapp</label>
+                <input type="radio" value="whatssap" id="radio-whatsapp" checked>
+        
+            </fieltdset>
 
-            <div>
-                <p>Qual horário prefere ser atendido?</p>
+            <fieltdset>
+                <legend>Qual horário prefere ser atendido?</legend>
                 <select>
                     <option>Manhã</option>
                     <option>Tarde</option>
                     <option>Noite</option>
                 </select>
-            </div>
+            </fieltdset>
 
             <label class="checkbox"><input type="checkbox" checked>Gostaria de receber nossas novidades por email?</label>
-                <input type="submit" value="Enviar formulário">
+                <input type="submit" value="Enviar formulário" class="enviar">
             </form>
         </main>
 
         <footer>
-            <img src="logo-branco.png">
-            <p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
+            <img src="logo-branco.png" alt=" Logo da Brabearia Alura">
+            <legend class="copyright">&copy; Copyright Barbearia Alura - 2019</legend>
         </footer>
     </body>
 </html>
