--- a/giulia_hxs/contato.html
+++ b/giulia_hxs/contato.html
@@ -63,6 +63,31 @@
             <label class="checkbox"><input type="checkbox" checked>Gostaria de receber nossas novidades por email?</label>
                 <input type="submit" value="Enviar formulário" class="enviar">
             </form>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Dia</th>
+                            <th>Horário</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Segunda</td>
+                            <td>8h ás 20h</td>
+                        </tr>
+                        <tr>
+                            <td>Quarta</td>
+                            <td>8h ás 20h</td>
+                        </tr>
+                        <tr>
+                            <td>Sexta</td>
+                            <td>8h ás 20h</td>
+                        </tr>
+                        <tr>
+                            <td colspan="5"> Campo Largo</td> 
+                        </tr>
+                    </tbody>
+                </table>
         </main>
 
         <footer>
